# classpath-surfer

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTING_ko.md  Cargo.toml  LICENSE  README.md  README_ko.md  build.rs
.claude-plugin/: marketplace.json  plugin.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report_ko.md  feature_request.md  feature_request_ko.md
.github/workflows/: ci.yml  release.yml
agents/: classpath-index.md  find-symbol.md  list-deps.md  search-classpath.md  show-classpath-source.md  show-source.md
benches/: refresh.rs  search.rs
docs/: indexing.md
proto/: kotlin_metadata.proto
scripts/: sync-kotlin-proto.sh
skills/classpath-index/: SKILL.md
skills/find-symbol/: SKILL.md
skills/list-deps/: SKILL.md
skills/manage-index/: SKILL.md
skills/refresh-deps/: SKILL.md
skills/search-classpath/: SKILL.md
skills/show-classpath-source/: SKILL.md
skills/show-source/: SKILL.md
src/: config.rs  error.rs  lib.rs  main.rs  output.rs
src/cli/: clean.rs  deps.rs  init.rs  list.rs  mod.rs  pkgs.rs  refresh.rs  render.rs  search.rs  show.rs  status.rs
src/gradle/: init_script.rs  mod.rs  runner.rs
src/index/: compat.rs  mod.rs  reader.rs  schema.rs  writer.rs
src/manifest/: diff.rs  merge.rs  mod.rs
src/model/: mod.rs  output.rs
src/parser/: classfile.rs  descriptor.rs  jar.rs  mod.rs
src/source/: decompiler.rs  locator.rs  mod.rs  resolver.rs
src/staleness/: buildfiles.rs  lockfile.rs  mod.rs  writer.rs
tests/: cli.rs  integration.rs  integration_mutation.rs  matrix.rs  unit.rs
(+27 files in other folders)
